# NTTESHGNN

./: .gitignore  CMakeLists.txt  NTTESHGNN.md  README.md
examples/: basic.c  esn.c  gnn.c
include/ntteshgnn/: nt_context.h  nt_echostate.h  nt_hypergraph.h  nt_nested.h  nt_ops.h  nt_storage.h  nt_tensor.h  nt_types.h  nt_typesystem.h  nt_vtnpu.h  ntteshgnn.h
src/: nt_context.c  nt_echostate.c  nt_hypergraph.c  nt_ops.c  nt_storage.c  nt_tensor.c  nt_types.c
tests/: test_esn.c  test_hypergraph.c  test_ops.c  test_tensor.c
